if (NOT SUPPORT_OPENGL)
    message("examples/4 disabled, OpenGL not fully supported.")
    return()
endif()
set(project_name "jaws-example-4")
project(${project_name} LANGUAGES CXX)
add_executable(${project_name} src/main.cpp)
target_link_libraries(${project_name} PRIVATE jaws::jaws glfw)
set_target_properties(${project_name} PROPERTIES FOLDER examples)
